# Sl_Gestion_Stock

./: .gitignore  README.md  package-lock.json
Gestion-main/: .gitignore  API_Modify_Order_Spec.md  API_Price_Evolution.md  Dockerfile  accounting_integration_guide.md  api_handoff.md  data.json  data_2.json  db.sqlite3  db_backup.sqlite3  dbbackup2.sqlite3  dbnew.sqlite3  frontend_accounting_integration.md  main.py  modelsCheck.py  prismaModels.py  pyproject.toml  requirements.txt  requirements_old.txt  requirements_old2.txt  whole.json
Gestion-main/accounting/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
Gestion-main/accounting/management/commands/: create_accounting_user.py
Gestion-main/accounting/migrations/: 0001_initial.py
Gestion-main/configs/: app2  conf2  gestion
Gestion-main/controller/: admin.py  cmdutils.py  models.py  serializer.py  urls.py  views.py  views.py_snippet
Gestion-main/controller/migrations/: 0001_initial.py  0002_delete_account_delete_example_and_more.py  0003_account_example_prismamigrations_session_testtest_and_more.py  0004_delete_testdjangomodel.py  0005_delete_account_delete_example_and_more.py  0006_productimage.py  0006_transportoption_alter_order_o_id_and_more.py  0007_transportoption_alter_order_transport.py  0007_transportoption_customuser_is_accounting_user_and_more.py
Gestion-main/controller/migrations_backup/: 0018_alter_client_id_alter_customuser_id_and_more.py  0019_optioncategories_alter_echeance_dateecheance.py  0020_order_transport_alter_echeance_dateecheance.py  0021_account_example_prismamigrations_session_testtest_and_more.py  0022_delete_testtest_alter_echeance_dateecheance.py  0023_alter_echeance_dateecheance.py  0024_alter_echeance_dateecheance.py  0025_testtest_alter_echeance_dateecheance.py  0026_delete_testtest.py  0027_testtest.py  0028_delete_testtest.py
Gestion-main/frontend/: package-lock.json  package.json
Gestion-main/frontend/src/: helper.js
Gestion-main/frontend/src/components/: HistoryV.js  Stock.js
Gestion-main/frontend/static/assets/: index-aa3425b5.css  index-f4070aaa.js
Gestion-main/frontend/static/frontend/: main.js  style.css
Gestion-main/gestionStock/: db_configs.json  settings.py  syncOptions.py  urls.py
Gestion-main/handlers/: ProductHandler.ipynb  backup.csv  backup2.csv  data.csv  new_prod.csv  out.csv  output.json  uploader.ipynb
(+2 files in other folders)
